--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="./css/custom.css">
     <title>Hello, world!</title>
 </head>
@@ -51,14 +52,14 @@
 <div class="section-1">
     <div class="container-fluid">
         <div class="row">
-            <h1 class="display-5 text-center">Welcome to Surprise Communication</h1>
+            <h1 class="display-5 text-center">Welcome to Surprise Product PTI LTD</h1>
             <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi architecto doloribus
                 fugit
                 iure neque nobis sequi voluptas voluptate. Asperiores culpa, dolorem illo labore laborum minima neque
                 qui
                 sapiente sequi. Perferendis?</p>
             <div class="col-12 text-center">
-                <button type="button" class="btn btn-outline-light">MORE</button>
+                <button type="button" class="btn btn-outline-info">MORE</button>
             </div>
         </div>
     </div>
@@ -77,7 +78,7 @@
                     sequi unde
                     veritatis?
                     <span>
-                        <button type="button" class="btn btn-outline-info float-left more">MORE</button>
+                        <button type="button" class="btn btn-outline-light float-left more">MORE</button>
                     </span>
                 </div>
             </div>
@@ -126,24 +127,24 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <div class="fiber__title bar">
+                <div class="fiber_accs__title bar">
                     FIBER ACCESSORIES
 
                 </div>
-                <div class="fiber__body">
+                <div class="fiber_accs__body">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur illo maxime nesciunt
                     officiis tempora.
                     Aperiam architecto aut esse expedita ipsum iste minus non, odit officia, quaerat reiciendis
                     sequi unde
                     veritatis?
                     <span>
-                        <button type="button" class="btn btn-outline-default float-left more">MORE</button>
+                        <button type="button" class="btn btn-outline-info float-left more">MORE</button>
                     </span>
                 </div>
             </div>
             <div class="col">
-                <div class="fiber">
-                    <div class="fiber__image">
+                <div class="fiber_accs">
+                    <div class="fiber_accs__image">
                         <img src="images/13.png" class="img-fluid rounded" alt="fiber laying">
                     </div>
                 </div>
@@ -199,7 +200,7 @@
                     sequi unde
                     veritatis?
                     <span>
-                        <button type="button" class="btn btn-outline-default float-left more">MORE</button>
+                        <button type="button" class="btn btn-outline-info float-left more">MORE</button>
                     </span>
                 </div>
             </div>
@@ -304,7 +305,7 @@
     </div>
 </div><!-- section-bottom -->
 <div class="section-footer">
-    <p class="text-center"> &copy; sarface comminication ltd.</p>
+    <p class="text-center"> &copy; SURPRISE PRODUCT PTI LTD.</p>
 </div>
 
 
